# idbt

./: .gitignore  example.py  run.py  ui.py  ui_inputs.py
idbt/: ARCHITECTURE.md  LICENSE.txt  README.md  docs.md.sh  pyproject.toml  pyproject.toml.old
idbt/src/idbt/: .user.yml  __about__.py  __init__.py  idbt.py  profiles.yml  settings.py
idbt/src/idbt/dbt_project/: dbt_project.yml
idbt/src/idbt/dbt_project/models/idbt/: select.sql  sources.yml
idbt/src/idbt/templates/: append.sql  data_source.sql  filter.sql  merge.sql  select.sql
idbt/test/: test.py
