[tool.poetry]
name = "idbt"
version = "0.1.0"
description = ""
authors = ["Conrad <conradbez1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.7.2"
mako = "^1.3.0"
dbt-duckdb = "^1.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
